# DiTing

./: .gitignore  README.md  pyproject.toml
configs/templates/: analysissettings.yaml  node.yaml  processing.yaml  routing.yaml  server.yaml
diting_sandbox/: __init__.py
diting_sandbox/core/: __init__.py  config.py  db.py  identification.py  ids.py  policy.py  storage.py  timeutil.py
diting_sandbox/guest_agent/: __init__.py  app.py  cli.py  contracts.py
diting_sandbox/node_agent/: __init__.py  capture.py  cli.py  client.py  config.py  contracts.py  guest.py  machinery.py  runner.py
diting_sandbox/server/: app.py  cli.py  schemas.py  service.py
diting_sandbox/server/static/: app.css
diting_sandbox/server/templates/: analyses.html  analysis_detail.html  base.html  dashboard.html  nodes.html  submit.html
script/: install.sh  qemu-kvm-install.sh
selfdoc/: windows-linux-sandbox-implementation-todolist.md  windows-linux-sandbox-technical-design.md
tests/: helpers.py  test_api.py  test_guest_agent.py  test_identification.py  test_node_agent.py  test_web_ui.py
